--- a/style.css
+++ b/style.css
@@ -3,22 +3,24 @@
     padding: 0;
     overflow-x: hidden;
 }
+
 p {
     animation-duration: 3s;
     animation-name: slidein;
-    animation-iteration-count:infinite;
-  }
-  @keyframes slidein {
+    animation-iteration-count: infinite;
+}
+
+@keyframes slidein {
     from {
-      margin-left: 100%;
-      width: 300%;
+        margin-left: 100%;
+        width: 300%;
     }
-  
+
     to {
-      margin-left: 25%;
-      width: 100%;
+        margin-left: 32%;
+        width: 100%;
     }
-  }
+}
 
 /* .account{
 background-image: url(img/square-xmark-solid.svg);
@@ -90,9 +92,10 @@ h1.heading {
 .sidebar {
     text-align: center;
     display: flex;
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
+    background-color: black;
     /* background-color: #3b2d2d; */
-    justify-content: center;
+    justify-content: right;
 
 }
 
@@ -220,15 +223,18 @@ h1.heading {
     font-weight: bold;
     font-size: x-large;
 }
-.product-head p{
+
+.product-head p {
     font-size: xx-large;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 .product-container {
-    
+
+    justify-content: center;
     display: flex;
+    width: 97%;
     flex-wrap: wrap;
 }
 
@@ -241,7 +247,7 @@ h1.heading {
     height: 40vh;
     border-radius: 9px;
     background-color: aliceblue;
-    width: 100vw;
+    /* width: 100vw; */
     margin-right: 10px;
     overflow: hidden;
     margin-left: 10px;
@@ -264,7 +270,7 @@ h1.heading {
     padding: 7px;
 }
 
-.product-list span img{
+.product-list span img {
     border-radius: 127px;
     width: 118px;
     height: 107px;
@@ -279,10 +285,10 @@ h1.heading {
     max-width: 1000px;
     position: relative;
     margin: auto;
-  }
-  
-  /* Caption text */
-  .text {
+}
+
+/* Caption text */
+.text {
     color: #f2f2f2;
     font-size: 15px;
     padding: 8px 12px;
@@ -290,19 +296,19 @@ h1.heading {
     bottom: 8px;
     width: 100%;
     text-align: center;
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
     color: #f2f2f2;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
+}
+
+/* The dots/bullets/indicators */
+.dot {
     height: 15px;
     width: 15px;
     margin: 0 2px;
@@ -310,27 +316,35 @@ h1.heading {
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-  }
-  
-  .active {
+}
+
+.active {
     background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
+}
+
+/* Fading animation */
+.fade {
     animation-name: fade;
     animation-duration: 1.5s;
-  }
-  
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
-    .text {font-size: 11px}
-  }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .text {
+        font-size: 11px
+    }
+}
+
 /* slide auto img end */
 
 
@@ -346,7 +360,7 @@ h1.heading {
 
 .footerservice {
     width: 20%;
-    padding: 0 15px;
+    /* padding: 0 15px; */
 }
 
 .footerservice h1 {
@@ -382,11 +396,15 @@ h1.heading {
 
 } */
 .footerservice ul li {
-    margin: 8px;
+    margin: 4px;
     font-size: 15px;
     align-items: center;
     color: gray;
     text-transform: none;
+    display: flex;
+    justify-content: center;
+}
+.footer-item{
     display: flex;
     justify-content: center;
 }
@@ -459,12 +477,25 @@ h1.heading {
         padding: 15px;
         font-weight: 900;
     }
+
+    .row {
+        display: flex;
+        justify-content: center;
+        margin-top: 8px;
+    }
+
+    .row h1 {
+        color: white;
+        font-size: x-large;
+    }
+
+   
 }
 
 /* @media (max-width=500px){ */
 
-    /* product start  */
-    /* .product {
+/* product start  */
+/* .product {
     background-color: #dee4e8;
 }
 
@@ -527,3 +558,31 @@ h1.heading {
 }
 
 } */
+
+/* footer :start */
+
+@media (max-width: 1000px) {
+    .footerservice {
+        width: 31%;
+       
+    }
+}
+
+@media (max-width: 715px) {
+    .footerservice {
+        width: 45%;
+    }
+    .footerservice ul li{
+        font-size: 10px;
+    }
+}
+
+@media (max-width:350px){
+    
+    .footerservice h4{
+        font-size: small;
+    }
+
+}
+
+/* footer :end */
